--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,9 @@ dependencies:
   flutter_spinning_wheel: ^1.1.0
   gradient_app_bar: ^0.1.3
   flutter_svg: ^0.18.0
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  mccounting_text: ^0.1.0
+  flutter_swiper: ^1.1.6
+  http: ^0.12.1
   cupertino_icons: ^0.1.3
 
 
@@ -39,15 +37,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/images/
   fonts:
     - family: Pacifico
       fonts:
@@ -57,6 +51,11 @@ flutter:
       fonts:
         - asset: assets/fonts/RadioSpaceBold-nPR1.otf
           weight: 400
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Light.ttf
+          weight: 300
+
+    - family: Rajdhani
+      fonts:
+        - asset: assets/fonts/Rajdhani-Regular.ttf
